# rules_ts

./: .bazelignore  CHANGELOG.md
examples/: pnpm-lock.yaml  pnpm-workspace.yaml
examples/proto_grpc/: BUILD.bazel
examples/react/: BUILD.bazel  defs.bzl  package.json  tsconfig.json
examples/react/src/: App.tsx  BUILD.bazel  other.ts
